# merge-fmt

./: .gitignore  .ocamlformat  CHANGES.md  Makefile  README.md  dune  dune-project  index.html  merge-fmt-help.txt  merge-fmt-mergetool-help.txt  merge-fmt-mergetool-setup-help.txt  merge-fmt-setup-merge-help.txt  merge-fmt-setup-mergetool-help.txt  merge-fmt.opam
.github/workflows/: build.yml
merge-fmt/: index.html
src/: common.ml  dune  fmters.ml  fmters.mli  merge_cmd.ml  merge_cmd.mli  merge_fmt.ml  resolve_cmd.ml  resolve_cmd.mli  setup_cmd.ml  setup_cmd.mli
test/: common.ml  dune  merge.ml  merge_dune.ml  mergetool.ml  partial.ml  rebase.diff  rebase_a.ml  rebase_b.ml  resolve1.ml  resolve2.ml
