opam-version: "2.0"
maintainer:   "hugo.heuzard@gmail.com"
authors:      "Hugo Heuzard"
homepage:     "https://github.com/hhugo/merge-fmt"
bug-reports:  "https://github.com/hhugo/merge-fmt/issues"
dev-repo:     "git+https://github.com/hhugo/merge-fmt.git"

name: "merge-fmt"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.06.1"}
  "dune" {build & >= "1.6"}
  "cmdliner"
  "base"
  "stdio"
]

synopsis: "Help merge-fmt across style changes"