opam-version: "2.0"
maintainer:   "hugo.heuzard@gmail.com"
authors:      "Hugo Heuzard"
homepage:     "https://github.com/hhugo/merge-fmt"
doc:          "https://hhugo.github.io/merge-fmt/"
bug-reports:  "https://github.com/hhugo/merge-fmt/issues"
dev-repo:     "git+https://github.com/hhugo/merge-fmt.git"
license:      "MIT"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.06.1"}
  "dune" {>= "3.0"}
  "cmdliner" {>= "1.1.0"}
  "base"
  "stdio"
  "ppx_expect" { with-test }
  "core_unix"  { with-test }
  "ocamlformat"  { = "0.24.1" & with-test }
]

synopsis: "Git mergetool leveraging code formatters"
description: """
`merge-fmt` is a small wrapper on top git commands to help resolve conflicts by leveraging code formatters.
"""
